--- a/package.json
+++ b/package.json
@@ -9,25 +9,27 @@
     "start": "concurrent \"npm run tsc:w\" \"node ./bin/www\" "
   },
   "dependencies": {
+    "amplify": "0.0.11",
+    "angular2": "2.0.0-beta.3",
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
-    "express": "~4.13.4",
-    "jade": "~1.11.0",
-    "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0",
-    "materialize": "~1.0.0",
-    "zone.js": "0.5.11",
     "es6-promise": "^3.0.2",
     "es6-shim": "^0.33.3",
-    "reflect-metadata": "0.1.2",
-    "rxjs": "5.0.0-beta.0",
-    "angular2": "2.0.0-beta.3",
-    "systemjs": "0.19.6",
+    "express": "~4.13.4",
+    "jade": "~1.11.0",
+    "materialize": "~1.0.0",
+    "mongodb": "^2.1.7",
+    "mongoose": "^4.4.3",
+    "morgan": "~1.6.1",
     "pg": "~4.4.3",
-    "amplify": "0.0.11",
+    "reflect-metadata": "0.1.2",
+    "requirejs": "~2.1.22",
+    "rxjs": "5.0.0-beta.0",
     "sequelize": "~3.18.0",
-    "requirejs": "~2.1.22"
+    "serve-favicon": "~2.3.0",
+    "systemjs": "0.19.6",
+    "zone.js": "0.5.11"
   },
   "devDependencies": {
     "concurrently": "^1.0.0",
